# vad-filter-onnx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  run.sh  test.sh
.github/workflows/: release.yml
cmake/: onnxruntime-linux-x86_64-gpu.cmake  onnxruntime-win-x64-gpu.cmake  onnxruntime.cmake  pybind11.cmake
include/: vad-config.h  vad-filter-onnx-cxx-api.cc  vad-filter-onnx-cxx-api.h
public/: fsmn_vad.16k.int8.onnx  fsmn_vad.16k.onnx  fsmn_vad.8k.onnx  ten-vad.k2.int8.onnx
public/models/: fsmn_vad.8k.int8.onnx  ten_vad.onnx
scripts/: export_onnx_fsmn_vad.py  filter_fbank.py  modelscope-dl.sh
tests/python/: test_online_vad.py
vad-filter-onnx/: CMakeLists.txt
vad-filter-onnx/include/: vad-config.h  vad-filter-onnx-cxx-api.cc  vad-filter-onnx-cxx-api.h
vad-filter-onnx/python/: CMakeLists.txt  binding.cc
vad-filter-onnx/utils/: onnx-common.cc  onnx-common.h
vad-filter-onnx/vad/: fsmn-vad-model.cc  fsmn-vad-model.h  silero-vad-model.cc  silero-vad-model.h  sliding-window-bit.h  ten-vad-model.cc  ten-vad-model.h  test-sliding-window-bit.cc  vad-model.cc  vad-model.h
